package es.ull.patrones.app;

import es.ull.patrones.gui.MainFrame;

public class App {
  public App() {}

  public void run() {
    MainFrame mainFrame = new MainFrame();
  }
}
