@startuml

interface Observer {
  +update(productList: List<Product>): void
  +removepreviousFrame(): void
}

class VintedApiSubject {
  +addObserver(observer: Observer): void
  +notifyObservers(productList: List<Product>): void
  +fetchData(page: int, object: String, priceMin: int, priceMax: int, favourites: int): void
  -data: String
}

class PrintObserver {
  -productFrame: ProductFrame
  +update(productList: List<Product>): void
  +removepreviousFrame(): void
}

class ProductFrame {
  -panel: JPanel
  +ProductFrame(productList: List<Product>)
  +displayProducts(productList: List<Product>): void
  +closeFrame(): void
  +createCopyableLabel(text: String): JLabel
}

class App {
  +run(): void
}

class Main {
  +main(args: String[]): void
}

class ParseJSON {
  -productList: List<Product>
  +doParsing(data: String, noOfFavouritesValue: int): void
  +getProductList(): List<Product>
}

class Product {
  -productId: int
  -title: String
  -url: String
  -favourites: int
  -totalAmount: String
  -currency: String
}

Observer <|-- PrintObserver
VintedApiSubject o-- Observer
ProductFrame <-- Observer
ProductFrame o-- JPanel
App --> Main
App o-- VintedApiSubject
Main o-- App
Main --> "1" VintedApiSubject

@enduml
